# Refill_T3N

./: .env.example  .gitignore  .vercelignore  DEMO_SCRIPT.md  HACKATHON_UPDATES.md  PRD.md  README.md  package-lock.json  package.json  structure.md  tailwind.config.ts
contracts/refillguard-auth/: Cargo.toml
contracts/refillguard-auth/src/: lib.rs
contracts/refillguard-auth/wit/: world.wit
scripts/t3n/: claim-agent.mjs  delegate-agent.mjs  ensure-agent.mjs  invoke-refillguard.mjs  register-contract.mjs  shared.mjs  whoami.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/agent/chat/: route.ts
src/app/api/agent/run/: route.ts
src/app/api/audit/: route.ts
src/app/api/consent/[consentId]/: route.ts
src/app/api/demo/reset/: route.ts
src/app/api/demo/state/: route.ts
src/app/api/inventory/: route.ts
src/app/api/inventory/[itemId]/update/: route.ts
src/app/api/mandates/: route.ts
src/app/api/products/: route.ts
src/app/api/t3n/status/: route.ts
src/lib/: agent.ts  llm-orchestrator.ts  merchant.ts  policy.ts  refillguard.test.ts  runner.ts  seed.ts  store.ts  t3n-live.ts  t3n.ts  types.ts
