[package]
name = "refillguard-auth"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
